# EpiNT

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_finetune.sh  run_pretrain.sh
EpiNT/configs/: default.yaml  finetune_configs.yaml  hf_accelerate_config.yaml  pretrain_configs.yaml
EpiNT/data/: chb_mit_data_handler.py  dataset_info.py  dataset_list.py  make_datasets.py  prep_downstream_datasets.py  prep_pretrain_datasets.py  utils.py
EpiNT/models/: EpiNT.py  EpiNT_ablation.py
EpiNT/models/layers/: freq_enc.py  freq_quantize.py  pos_encoding.py  quantize.py  revin.py  rotary_tran_enc.py
EpiNT/tasks/: base.py  finetune.py  pretrain.py
EpiNT/utils/: config.py  tools.py
configs/: dataset_configs.yaml  default.yaml  finetune_configs.yaml  pretrain_configs.yaml
epint/: __init__.py
epint/data/: chb_mit_data_handler.py  constants.py  prep_downstream_datasets.py  prep_pretrain_datasets.py  preprocess_eeg.py
epint/model/: EpiNTModel.py
epint/model/layers/: ffn.py  patch.py  tran_enc.py
epint/tasks/: base.py  finetune.py  pretrain.py
epint/utils/: config.py  gradients.py
examples/: viz_freq.ipynb
notebooks/: MAYO_classification.ipynb  representation_learning.ipynb  sample_feature_extractor.ipynb
scripts/: check_dataset.py  dataset_stat.py  finetune.py  generate_downstream_datasets.py  generate_pretrain_datasets.py  pretrain.py  run_finetune.sh  run_pretrain.sh
